--- a/DOCUMENTATION/THESIS.tex
+++ b/DOCUMENTATION/THESIS.tex
@@ -35,8 +35,21 @@ Az bizonyos, hogy minden informatikus - beleértve a leendőeket is - tanulmány
 \section{A feladat és annak értelmezése} 
 \section{Definíciók és jelölések}
 \section{Alkalmazott technológiák}
+A Következőkben röviden összefoglaljuk a Java\cite{Java} és a JavaFX\cite{JavaFX} jellegzetességeit.
 \subsection{A Java-ról röviden}
-A Java egy általános célú, objektumorientált programozási nyelv. 2009-ig a \emph{Sun Microsystems} fejlesztette, ezt követően pedig az \emph{Oracle}. A szakdolgozatban használt 1.8-as verziót már az \emph{Oracle} adta ki 2014-ben. A Java nyelv a szintaxisát a C és C++ nyelvektől örökölte, azonban utóbbitól eltérően egyszerű objektummodellel rendelkezik. A Java platformra készült programok túlnyomó többsége asztali alkalmazás. Manapság egyre több helyen találkozhatunk a Java nyelven írt programokkal, például mobil eszközökön, banki rendszereknél vagy akár egy szórakoztató elektronikai eszközön. Nagy előnye, hogy sok nyelvvel ellentétben platformfüggetlen, azaz egy adott platformról egy program minimális változtatással átültethető egy másik platformra.
+A Java egy általános célú, objektumorientált programozási nyelv, melyet 2009-ig a \emph{Sun Microsystems} fejlesztett, ezt követően pedig az \emph{Oracle}. A szakdolgozatban használt 1.8-as verziót már az \emph{Oracle} adta ki 2014-ben. A Java nyelv a szintaxisát a C és C++ nyelvektől örökölte, azonban utóbbitól eltérően egyszerű objektummodellel rendelkezik. 
+\newline \indent A Java platformra készült programok túlnyomó többsége asztali alkalmazás. Manapság egyre több helyen találkozhatunk a Java nyelven írt programokkal, például mobil eszközökön, banki rendszereknél vagy akár egy szórakoztató elektronikai eszközön. Nagy előnye, hogy sok nyelvvel ellentétben platformfüggetlen, azaz egy adott platformról egy program minimális változtatással átültethető egy másik platformra. 
+\newline \indent A Java legfontosabb része a \emph{Java virtuális gép (JVM)}. A \emph{JVM}-et sokféle berendezés és szoftvercsomag tartalmazza, így a nyelv egyaránt platformként és középszintként is működik.
+Összefoglalva a Java program három fontos szerepet tölt be:
+\begin{description}[1cm]
+\item[$\bullet$ programozási nyelv]
+\item[$\bullet$ köztes réteg (middleware)]
+\item[$\bullet$ platform]
+\end{description}
+\subsection{JavaFX}
+Olyan szoftverplatform, amelynek célja, hogy gazdag internetes alkalmazást lehessen készíteni és futtatni eszközök széles skáláján. Eredetileg a \emph{Swing} könyvtárat váltotta volna fel, azonban jelenleg mindkettő része a \emph{Jave SE}-nek. 
+\newline \indent A 2.0-ás verzióig a fejlesztők egy külön nyelvet használtak, amelyet \emph{JavaFX Script}-nek neveznek. Azonban mivel ez szintén Java bájtkódot generál a későbbiekben megadatott a lehetőség, hogy a programozók Java kódot használjanak helyette. A JavaFX egyik legnagyobb előnye, hogy egy egyszerű \emph{XML} struktúrában leírhatók a program grafikus felületének összetevői, melyhez ezt követően elegendő az egyes interakciókhoz tartozó funkciókat implementálni. 
+\newline \indent Az elterjedtebb operációs rendszerek mindegyikét támogatja. Ahogyan előnye, úgy hátránya is a \emph{Swing}-hez képest az, hogy jelenleg is folyik a fejlesztése, ezért olykor csak hosszas utánajárást követően sikerül megoldást találni egy-egy problémára.
 
 \chapter{Felhasználói dokumentáció}
 
@@ -51,10 +64,20 @@ A legrégebbi és a legegyszerűbb rendezési algoritmus. Mindemellett a legtöb
 
 \chapter{Fejlesztői dokumentáció}
 
-\begin{thebibliography}{widest entry} 
+\begin{thebibliography}{widest entry}
+\bibitem{Java}
+\emph{Java (programming language)},
+Wikipedia the free encyclopedia.
+[ONLINE] [Hivatkozva: 2015.04.21]
+\url{http://en.wikipedia.org/wiki/Java_(programming_language)/}
+\bibitem{JavaFX}
+\emph{JavaFX},
+Wikipedia the free encyclopedia.
+[ONLINE] [Hivatkozva: 2015.04.21]
+\url{http://en.wikipedia.org/wiki/JavaFX/}
 \bibitem{Demuth}
 Demuth, H.:
-\emph{Electronic Data Sorting.},
+\emph{Electronic Data Sorting},
 PhD thesis, Stanford University,
 1956, [184]
 \bibitem{Fekete}
